build/log/idf_py_stderr_output_737633
/home/kevino/Programming/GPS Data Logger/main/ui_task.c: In function 'ui_task':
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:47:27: error: 'button_event_queue' undeclared (first use in this function); did you mean 'button_event_t'?
   47 |         if (xQueueReceive(button_event_queue, &btn_evt, 0)) {
      |                           ^~~~~~~~~~~~~~~~~~
      |                           button_event_t
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:47:27: note: each undeclared identifier is reported only once for each function it appears in
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:65:9: error: unknown type name 'telemetry_snapshot_t'
   65 |         telemetry_snapshot_t snap;
      |         ^~~~~~~~~~~~~~~~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:66:9: error: implicit declaration of function 'telemetry_get_snapshot' [-Werror=implicit-function-declaration]
   66 |         telemetry_get_snapshot(&snap);
      |         ^~~~~~~~~~~~~~~~~~~~~~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:71:73: error: request for member 'gps' in something not a structure or union
   71 |                 snprintf(buf, sizeof(buf), "Sats: %d Fix: %d", (int)snap.gps.numSV, (int)snap.gps.fixType);
      |                                                                         ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:71:94: error: request for member 'gps' in something not a structure or union
   71 |                 snprintf(buf, sizeof(buf), "Sats: %d Fix: %d", (int)snap.gps.numSV, (int)snap.gps.fixType);
      |                                                                                              ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:73:68: error: request for member 'gps' in something not a structure or union
   73 |                 snprintf(buf, sizeof(buf), "Lat: %.5f", (float)snap.gps.lat / 1e7f);
      |                                                                    ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:75:68: error: request for member 'gps' in something not a structure or union
   75 |                 snprintf(buf, sizeof(buf), "Lon: %.5f", (float)snap.gps.lon / 1e7f);
      |                                                                    ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:77:69: error: request for member 'gps' in something not a structure or union
   77 |                 snprintf(buf, sizeof(buf), "Alt: %.1fm", (float)snap.gps.hMSL / 1000.0f);
      |                                                                     ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:83:64: error: request for member 'env' in something not a structure or union
   83 |                 snprintf(buf, sizeof(buf), "Temp: %.1f C", snap.env.temperature);
      |                                                                ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:85:66: error: request for member 'env' in something not a structure or union
   85 |                 snprintf(buf, sizeof(buf), "Pres: %.1f hPa", snap.env.pressure);
      |                                                                  ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:87:65: error: request for member 'env' in something not a structure or union
   87 |                 snprintf(buf, sizeof(buf), "Hum:  %.1f %%", snap.env.humidity);
      |                                                                 ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:93:59: error: request for member 'mag' in something not a structure or union
   93 |                 snprintf(buf, sizeof(buf), "H: %.1f", snap.mag.heading);
      |                                                           ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:97:38: error: request for member 'mag' in something not a structure or union
   97 |                 int idx = (int)((snap.mag.heading + 22.5f) / 45.0f);
      |                                      ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:98:17: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
   98 |                 if (idx < 0) idx = 0; if (idx > 8) idx = 8;
      |                 ^~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:98:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
   98 |                 if (idx < 0) idx = 0; if (idx > 8) idx = 8;
      |                                       ^~
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:101:39: error: request for member 'mag' in something not a structure or union
  101 |                 draw_needle(&dev, snap.mag.heading);
      |                                       ^
/home/kevino/Programming/GPS Data Logger/main/ui_task.c:117:9: error: implicit declaration of function 'ssd1306_show_screen'; did you mean 'ssd1306_clear_screen'? [-Werror=implicit-function-declaration]
  117 |         ssd1306_show_screen(&dev, false);
      |         ^~~~~~~~~~~~~~~~~~~
      |         ssd1306_clear_screen
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:275: esp-idf/main/CMakeFiles/__idf_main.dir/ui_task.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7198: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
